fix this for compiled builds?